Pipe high contrast message through to iframe when visible, fix loader CSS

--- a/skillmap/src/styles/makecode-editor.css
+++ b/skillmap/src/styles/makecode-editor.css
@@ -59,13 +59,13 @@
   border-color: var(--high-contrast-text);
 }
 
-.makecode-frame-loader img {
+.high-contrast .makecode-frame-loader img {
   filter: grayscale(100%) brightness(60%) contrast(400%);
   animation: none;
   -webkit-animation: none;
 }
 
-.makecode-frame-loader-fill {
+.high-contrast .makecode-frame-loader-fill {
   background-color: var(--high-contrast-text);
 }
 
